# user_crud

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/controllers/: user_controller.py
app/models/: user.py
app/schemas/: user.py
app/services/: user_service.py
migrations/: env.py
migrations/versions/: 32b67da23fb8_initial_migration.py
